--- a/styles/userOrder.css
+++ b/styles/userOrder.css
@@ -1,5 +1,4 @@
-html,
-body {
+html, body {
     font-family: 'Poppins', sans-serif;
     background-color: #121212;
     color: white;
@@ -70,18 +69,42 @@ body {
     flex-direction: column;
     cursor: pointer;
     padding: 1rem;
+    position: relative;
+    margin-bottom: 1rem;
 }
 
 .order-card:hover {
     transform: translateY(-8px);
-    box-shadow: 0 0 18px rgba(147, 51, 234, 0.35),
+    box-shadow: 0 0 18px rgba(163, 100, 223, 0.726),
         0 10px 28px rgba(0, 0, 0, 0.6);
 }
 
+.order-status {
+    position: absolute;
+    top: 0.8rem;
+    right: 0.8rem;
+    padding: 0.3rem 0.7rem;
+    border-radius: 12px;
+    font-size: 0.75rem;
+    font-weight: bold;
+    color: #0f0f0f;
+    text-transform: uppercase;
+    pointer-events: none;
+}
+
+.order-status.pendiente {
+    background-color: #f39c12;
+}
+
+.order-status.cancelado {
+    background-color: #e74c3c;
+}
+
+.order-status.entregado {
+    background-color: #2ecc71;
+}
+
 .order-info {
-    display: flex;
-    align-items: center;
-    justify-content: space-between;
     margin-top: .5rem;
 }
 
@@ -95,33 +118,60 @@ body {
     display: flex;
     flex-direction: column;
     align-items: flex-start;
-    gap: 1.5rem;
+    margin-bottom: 1.5rem;
+    border-bottom: 2px solid #bbb;
 }
 
-.order-products h3 {
+.order-total {
     font-weight: bold;
     color: var(--text-light);
     margin: 0;
-    margin-bottom: 1.5rem;
+    display: flex;
+    justify-content: space-between;
+}
+
+.order-total h2 {
+    margin: 0;
 }
 
 .order-product-item {
     display: flex;
-    align-items: center;
-    gap: 0.8rem;
+    align-items: stretch;
+    gap: 1rem;
+    padding: 1rem;
+    border-radius: 10px;
+}
+
+.order-product-details {
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+    flex: 1;
 }
 
 .product-image {
-    width: 40px;
-    height: 40px;
+    width: 15%;
     object-fit: cover;
-    border-radius: 5px;
+    border-radius: 10px;
 }
 
-.product-name,
+.product-name {
+    color: #fff;
+    font-size: 1.2rem;
+    font-weight: 600;
+}
+
 .product-platform {
-    color: #bbb;
-    font-size: 0.9rem;
+    color: #aaa;
+    font-size: 1rem;
+    margin-top: 0.3rem;
+}
+
+.product-qty,
+.product-price {
+    font-size: 1rem;
+    color: #ddd;
+    margin-top: 0.3rem;
 }
 
 .product-qty,
