--- a/styles/userOrder.css
+++ b/styles/userOrder.css
@@ -119,7 +119,7 @@ body {
     flex-direction: column;
     align-items: flex-start;
     margin-bottom: 1.5rem;
-    border-bottom: 2px solid #bbb;
+    border-bottom: 2px solid #434343;
 }
 
 .order-total {
