--- a/styles/orderDetail.css
+++ b/styles/orderDetail.css
@@ -13,24 +13,29 @@ body {
 }
 
 .main-content {
+    flex: 1;
+    display: flex;
+    overflow-y: auto;
     padding-top: 80px;
+    align-items: center;
     padding-bottom: 100px;
+    flex-direction: column;
 }
 
 .order-details-container {
     max-width: 1400px;
-    margin: 0 auto;
-    padding: 2rem;
+    width: 100%;
 }
 
 .padded-section {
-    padding: 1.5rem 0;
+    padding: 2rem;
 }
 
 .back-button-container {
     display: flex;
     justify-content: flex-start;
     width: 100%;
+    margin-top: 1rem;
 }
 
 .back-button {
@@ -55,7 +60,7 @@ body {
     background: #181818;
     border-radius: 16px;
     box-shadow: 0 4px 24px rgba(0, 0, 0, 0.4);
-    padding: 2rem 2.5rem;
+    padding: 2rem;
 }
 
 .factura-header {
