--- a/styles/detailProduct.css
+++ b/styles/detailProduct.css
@@ -138,7 +138,7 @@ body {
 }
 
 .product-price-final {
-    color: #4caf50;
+    color: lightgreen;
     font-weight: 700;
     font-size: 2rem;
 }
@@ -196,8 +196,13 @@ body {
     margin: 0;
 }
 
-.stock-display {
+.stock-display, .stock-unavailable {
     color: red;
+    font-weight: bold;
+}
+
+.stock-available {
+    color: lightgreen;
     font-weight: bold;
 }
 
@@ -229,6 +234,13 @@ select {
     width: 70%;
     font-size: 1.2rem;
     font-weight: lighter;
+}
+
+.btn-disabled {
+    opacity: 0.5 !important;
+    cursor: not-allowed !important;
+    filter: grayscale(40%) !important;
+    transition: opacity 0.2s, filter 0.2s;
 }
 
 #add-to-fav-btn {
