Refactoricé las vistas de administrador y mejoré la interfaz de usuario. - Implementé control de acceso en las páginas de administrador para restringir el acceso solo a usuarios autorizados. - Actualicé las páginas de gestión de productos y usuarios, agregando paginación y funcionalidad de búsqueda. - Mejoré los estilos en varias vistas para mantener una apariencia coherente, utilizando la tipografía 'Poppins'. - Eliminé archivos CSS que no se usaban y consolidé los estilos para facilitar el mantenimiento. - Mejoré la vista de detalle de pedidos tanto para administradores como para usuarios, agregando funciones de gestión de pedidos.

--- a/styles/orderDetail.css
+++ b/styles/orderDetail.css
@@ -12,6 +12,12 @@ body {
     min-height: 100vh;
 }
 
+.container {
+    display: flex;
+    height: 100vh;
+    overflow: hidden;
+}
+
 .main-content {
     flex: 1;
     display: flex;
@@ -20,6 +26,13 @@ body {
     align-items: center;
     padding-bottom: 100px;
     flex-direction: column;
+}
+
+.main-content-admin {
+    flex: 1;
+    padding: 2rem 2rem 7rem 2rem;
+    overflow-y: auto;
+    background-color: black;
 }
 
 .order-details-container {
