--- a/styles/addOrModifyProduct.css
+++ b/styles/addOrModifyProduct.css
@@ -1,10 +1,10 @@
-html,
-body {
+html, body {
+    font-family: 'Poppins', sans-serif;
+    background-color: #121212;
+    color: white;
     height: 100%;
     margin: 0;
     padding: 0;
-    overflow: hidden;
-    font-family: 'Segoe UI', sans-serif;
 }
 
 .container {
