--- a/styles/dashboard.css
+++ b/styles/dashboard.css
@@ -1,9 +1,11 @@
-html, body {
+html,
+body {
+    font-family: 'Poppins', sans-serif;
+    background-color: #121212;
+    color: white;
     height: 100%;
     margin: 0;
     padding: 0;
-    overflow: hidden;
-    font-family: 'Segoe UI', sans-serif;
 }
 
 .container {
@@ -14,7 +16,7 @@ html, body {
 
 .main-content {
     flex: 1;
-    padding: 2rem;
+    padding: 2rem 2rem 7rem 2rem;
     overflow-y: auto;
     background-color: black;
 }
