--- a/styles/products.css
+++ b/styles/products.css
@@ -11,12 +11,12 @@
 
 html,
 body {
+    font-family: 'Poppins', sans-serif;
+    background-color: #121212;
+    color: white;
     height: 100%;
     margin: 0;
     padding: 0;
-    overflow-x: hidden;
-    overflow-y: auto;
-    font-family: 'Segoe UI', sans-serif;
 }
 
 .container {
@@ -119,7 +119,7 @@ body {
     pointer-events: none;
 }
 
-.tabla-productos {
+.products-table {
     width: 100%;
     border-collapse: collapse;
     background-color: var(--bg-main);
@@ -129,12 +129,12 @@ body {
     table-layout: fixed;
 }
 
-.tabla-productos thead {
+.products-table thead {
     background-color: var(--bg-header);
 }
 
-.tabla-productos th,
-.tabla-productos td {
+.products-table th,
+.products-table td {
     padding: 14px 12px;
     text-align: center;
     border-bottom: 1px solid var(--border);
@@ -146,18 +146,18 @@ body {
     white-space: nowrap;
 }
 
-.tabla-productos th {
+.products-table th {
     color: var(--text-light);
     font-weight: 600;
     font-size: 15px;
     text-transform: uppercase;
 }
 
-.tabla-productos td {
+.products-table td {
     max-width: 250px;
 }
 
-.tabla-productos td img {
+.products-table td img {
     width: 75px;
     height: auto;
     border-radius: 6px;
@@ -167,8 +167,8 @@ body {
     margin: 0 auto;
 }
 
-.tabla-productos td:nth-child(6),
-.tabla-productos td:nth-child(7) {
+.products-table td:nth-child(6),
+.products-table td:nth-child(7) {
     max-width: 200px;
     padding: 8px;
 }
