Mejoré la lógica al eliminar un producto de la base de datos. En vez de eliminarlo, lo desactivo y lo elimino de todos los carritos y de todas las listas de favoritos. - Mejoré la lógica al modificar los datos personales en la interfaz profile.php. Ahora valida todos los campos antes de guardar los datos y se pueden subir bien las imagenes del perfil. Si no se elije una imagen nueva, se mantiene la actual. - También mejoré la interfaz profile.php agregando un boton para poder volver a la pagina anterior, y que al pulsar cualquiera de los botones de "editar" se cambia el texto a "cancelar" y si se vuelve a pulsar que se desahibiliten los inputs de los formularios.

--- a/styles/addOrModifyProduct.css
+++ b/styles/addOrModifyProduct.css
@@ -21,6 +21,31 @@ html, body {
     padding-bottom: 100px;
 }
 
+.back-button-container {
+    display: flex;
+    justify-content: flex-start;
+    width: 100%;
+    margin-top: 1rem;
+}
+
+.back-button {
+    color: #fff;
+    border: none;
+    border-radius: 8px;
+    cursor: pointer;
+    font-size: 1.1rem;
+    text-decoration: none;
+}
+
+.back-button i {
+    margin-right: .7rem;
+}
+
+.back-button span:hover {
+    transition: font-size 0.3s ease;
+    color: #caa0ec;
+}
+
 .product-form {
     display: flex;
     background-color: #1c1c1e;
