--- a/styles/userOrder.css
+++ b/styles/userOrder.css
@@ -1,4 +1,5 @@
-html, body {
+html,
+body {
     font-family: 'Poppins', sans-serif;
     background-color: #121212;
     color: white;
@@ -115,8 +116,8 @@ body {
 }
 
 .products {
-    display: flex;
-    flex-direction: column;
+    display: grid;
+    grid-template-columns: repeat(2, 1fr);
     align-items: flex-start;
     margin-bottom: 1.5rem;
     border-bottom: 2px solid #434343;
