--- a/styles/checkout.css
+++ b/styles/checkout.css
@@ -35,7 +35,7 @@ body {
 }
 
 .checkout-container {
-    margin: 2rem auto;
+    margin: 4rem auto 0;
     max-width: 1400px;
 }
 
@@ -59,6 +59,7 @@ body {
 .checkout-section {
     text-align: left;
     padding: 2rem;
+    border-radius: 10px;
     background-color: var(--secondary-color);
 }
 
@@ -113,6 +114,7 @@ body {
 .order-summary {
     text-align: left;
     padding: 2rem;
+    border-radius: 10px;
     background-color: var(--secondary-color);
 }
 
