--- a/styles/products.css
+++ b/styles/products.css
@@ -7,6 +7,7 @@
     --info: #4fc3f7;
     --hover-dark: #333;
     --border: #333;
+    --success: #4caf50;
 }
 
 html,
@@ -204,6 +205,7 @@ td:nth-child(8) {
     width: 70%;
 }
 
+.btn-icon-activar,
 .btn-icon-eliminar,
 .btn-icon-modificar {
     background-color: transparent;
@@ -218,6 +220,10 @@ td:nth-child(8) {
     font-size: 20px;
 }
 
+.btn-icon-activar {
+    color: var(--success);
+}
+
 .btn-icon-eliminar {
     color: var(--danger);
 }
@@ -226,6 +232,7 @@ td:nth-child(8) {
     color: var(--info);
 }
 
+.btn-icon-activar:hover,
 .btn-icon-eliminar:hover,
 .btn-icon-modificar:hover {
     background-color: var(--hover-dark);
