--- a/styles/nav.css
+++ b/styles/nav.css
@@ -42,9 +42,15 @@
     transform: scale(1.1);
 }
 
+.navbar-search-container {
+    position: relative;
+    display: flex;
+    align-items: center;
+}
+
 #navbar-search-form {
     position: absolute;
-    right: 22rem;
+    right: 0;
     top: 50%;
     transform: translateY(-50%);
     background-color: rgba(0, 255, 255, 0.5);
@@ -55,7 +61,7 @@
     padding: 0.4rem 0.8rem;
     opacity: 0;
     width: 0;
-    z-index: 0;
+    z-index: 10;
     transition: width 0.4s ease, opacity 0.3s ease;
     white-space: nowrap;
 }
